# cmake-examples-Chinese

./: README.md  hao.md
basic_learning/00csdndemo/demo01/: CMakeLists.txt  main.cc
basic_learning/00csdndemo/demo02/: CMakeLists.txt  MathFunctions.cc  MathFunctions.h  main.cc
basic_learning/00csdndemo/demo03/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake  main.cc
basic_learning/00csdndemo/demo03/math/: Makefile  MathFunctions.cc  MathFunctions.h  cmake_install.cmake
basic_learning/01helloworld/: CMakeLists.txt  main.cpp
basic_learning/02helloheaders/: CMakeLists.txt
basic_learning/02helloheaders/include/: Hello.h
basic_learning/02helloheaders/src/: Hello.cpp  main.cpp
basic_learning/03staticlibrary/: CMakeLists.txt
basic_learning/03staticlibrary/include/static/: Hello.h
basic_learning/03staticlibrary/src/: Hello.cpp  main.cpp
basic_learning/04sharedlibrary/: CMakeLists.txt
basic_learning/04sharedlibrary/include/shared/: Hello.h
basic_learning/04sharedlibrary/src/: Hello.cpp  main.cpp
